--- a/WarehouseEcommerce/Web.config
+++ b/WarehouseEcommerce/Web.config
@@ -18,7 +18,7 @@
   <connectionStrings>
     <!--Connection strings for Development Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=LinkV1.2873;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=IceStoneOrderingR4;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=GaneDataV4;User ID=pharmix;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--Connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=GanedataV1.2852;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True"/>-->
     <!--Connection strings for Sattar Laptop-->
@@ -63,6 +63,10 @@
     <add key="elmah.mvc.allowedUsers" value="*" />
     <add key="elmah.mvc.route" value="elmah" />
     <add key="elmah.mvc.UserAuthCaseSensitive" value="true" />
+
+    <add key="PAYPAL_RET_URL" value="http://localhost:8006/" />
+    <add key="PAYPAL_IPN_URL" value="https://link.warehouse.zone/Test/IPN" />
+    <add key="PAYPAL_URL" value="https://www.sandbox.paypal.com/cgi-bin/webscr" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
