--- a/GaneEcommerce.Services/Ganedata.Core.Services.csproj
+++ b/GaneEcommerce.Services/Ganedata.Core.Services.csproj
@@ -365,7 +365,10 @@
     <Compile Include="Core\Barcoding\GS128Decoder.cs" />
     <Compile Include="Core\Finance\Financials.cs" />
     <Compile Include="Core\Inventory\Inventory.cs" />
+    <Compile Include="Core\Inventory\InventoryAvailabilityExtensions.cs" />
     <Compile Include="Core\Inventory\InventoryExtensions.cs" />
+    <Compile Include="Core\Inventory\InventoryPalletExtensions.cs" />
+    <Compile Include="Core\Inventory\InventoryStockMoveExtensions.cs" />
     <Compile Include="Deliverect\IDeliverectSyncService.cs" />
     <Compile Include="Deliverect\DeliverectSyncService.cs" />
     <Compile Include="Emails\EmailServices.cs" />
