Implemented OrderStatus tracking with transactions and fixed location issue with stocktake

--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1275,6 +1275,10 @@
     <Compile Include="Migrations\202102231305160_AddedInventoryChangesToTransactions.designer.cs">
       <DependentUpon>202102231305160_AddedInventoryChangesToTransactions.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103031152587_AddedOrderStatusToTransactions.cs" />
+    <Compile Include="Migrations\202103031152587_AddedOrderStatusToTransactions.designer.cs">
+      <DependentUpon>202103031152587_AddedOrderStatusToTransactions.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
@@ -2552,6 +2556,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202102231305160_AddedInventoryChangesToTransactions.resx">
       <DependentUpon>202102231305160_AddedInventoryChangesToTransactions.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103031152587_AddedOrderStatusToTransactions.resx">
+      <DependentUpon>202103031152587_AddedOrderStatusToTransactions.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
