--- a/GaneEcommerce.Entities/packages.config
+++ b/GaneEcommerce.Entities/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ApplicationInsights.Helpers.WebCore" version="1.3.0" targetFramework="net472" />
   <package id="BCrypt.Net-Next" version="4.0.0" targetFramework="net472" />
+  <package id="Braintree" version="3.2.1" targetFramework="net472" />
   <package id="Microsoft.ApplicationInsights" version="2.15.0" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
