--- a/WMS/packages.config
+++ b/WMS/packages.config
@@ -7,6 +7,7 @@
   <package id="AutoMapper" version="10.0.0" targetFramework="net472" />
   <package id="bootstrap" version="4.5.2" targetFramework="net472" />
   <package id="bootstrap.less" version="3.4.1" targetFramework="net472" />
+  <package id="Braintree" version="5.4.0" targetFramework="net472" />
   <package id="cldrjs" version="0.5.1" targetFramework="net472" />
   <package id="ClosedXML" version="0.95.3" targetFramework="net472" />
   <package id="ClosedXML.Report" version="0.2.1" targetFramework="net472" />
