--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -58,7 +58,7 @@
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=BecscoLiveV1.4005;User ID=sa;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=Icestone4005_StagingV2;User ID=sa;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=BecscoLive_v4010;User ID=sa;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=IceStoneOrderingV1.2874;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
@@ -325,9 +325,12 @@
   <devExpress>
     <themes enableThemesAssembly="true" styleSheetTheme="" theme="Default" customThemeAssemblies="" />
     <compression enableHtmlCompression="true" enableCallbackCompression="true" enableResourceCompression="true" enableResourceMerging="true" />
-    <settings doctypeMode="Xhtml" rightToLeft="false" embedRequiredClientLibraries="false" checkReferencesToExternalScripts="true" accessibilityCompliant="false" />
+    <settings doctypeMode="Xhtml" rightToLeft="false" embedRequiredClientLibraries="true" checkReferencesToExternalScripts="true" accessibilityCompliant="false" />
     <errors callbackErrorRedirectUrl="~/error" />
-    <resources></resources>
+    <resources>
+      <!--<add type="ThirdParty" />-->
+      <add type="DevExtreme" />
+    </resources>
   </devExpress>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
