--- a/WarehouseDpdLabelPrint/App.config
+++ b/WarehouseDpdLabelPrint/App.config
@@ -5,7 +5,7 @@
   </startup>
   <appSettings>
     <add key="TenantId" value="1" />
-    <add key="SiteUrl" value="http://localhost:8005/" />
+    <add key="SiteUrl" value="https://gelbottle.warehouse.zone/" />
     <add key="AccessSerial" value="IxAzoxkBFW0x" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
