--- a/WMS/packages.config
+++ b/WMS/packages.config
@@ -65,6 +65,7 @@
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="qTip2" version="2.2.1" targetFramework="net472" />
   <package id="Respond" version="1.4.2" targetFramework="net472" />
+  <package id="Stripe.net" version="39.40.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.ComponentModel.Annotations" version="4.7.0" targetFramework="net472" />
   <package id="System.Configuration.ConfigurationManager" version="4.7.0" targetFramework="net472" />
@@ -80,6 +81,7 @@
   <package id="System.Reflection.Emit" version="4.7.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
