#is1-t293-Stripe-refunds and #Max400 fixes per account and cosmetics

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -58,7 +58,7 @@
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEV-LAPTOP2;Initial Catalog=BecscoLiveV1.3000;User ID=sa;Password=developer;Integrated Security=False;MultipleActiveResultSets=True" />-->
     <!--connection strings for Sattar Laptop-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=BecscoLiveV1.4005;User ID=sa;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=IcestoneStaging_v4012A;User ID=sa;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=.\sql16;Initial Catalog=IcestoneStaging_v4014;User ID=sa;Password=Pharmix123#;Integrated Security=False;MultipleActiveResultSets=True" />
     <!--connection strings for Development PC-->
     <!--<add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DEVELOPMENT-PC2;Initial Catalog=IceStoneOrderingV1.2874;Integrated Security=False;User Id=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />-->
     <!--connection strings for Naveed PC-->
@@ -107,6 +107,7 @@
     <add key="MerakiSecretKey" value="1d9399b50f91cf1672d709744e3d70b93083eb04" />
     <add key="SMSBroadcastUser" value="Ganedata01" />
     <add key="SMSBroadcastPassword" value="92DqXS3tfh" />
+    <add key="StripeIsLive" value="true" />
   </appSettings>
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
