--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1315,6 +1315,10 @@
     <Compile Include="Migrations\202103301359521_AddedStripeRefundInformation.designer.cs">
       <DependentUpon>202103301359521_AddedStripeRefundInformation.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202103311612440_AddedStripeWebhookHandlers.cs" />
+    <Compile Include="Migrations\202103311612440_AddedStripeWebhookHandlers.designer.cs">
+      <DependentUpon>202103311612440_AddedStripeWebhookHandlers.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
@@ -2622,6 +2626,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202103301359521_AddedStripeRefundInformation.resx">
       <DependentUpon>202103301359521_AddedStripeRefundInformation.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202103311612440_AddedStripeWebhookHandlers.resx">
+      <DependentUpon>202103311612440_AddedStripeWebhookHandlers.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
