Product attributes UI changes - tested & APIs amended to reflect new changes small/large/medium or scoops

--- a/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
+++ b/GaneEcommerce.Entities/Ganedata.Core.Entities.csproj
@@ -252,6 +252,7 @@
     <Compile Include="Domain\ViewModels\AdyenPayments\CreatePayLinkRequestViewModel.cs" />
     <Compile Include="Domain\ViewModels\AdyenPayments\PaypalPaymentAuthorisationRequest.cs" />
     <Compile Include="Domain\ViewModels\AdyenPayments\PaypalWebhookSaleCompleteRequest.cs" />
+    <Compile Include="Domain\ViewModels\AdyenPayments\ProductAttributeValuesMapModel.cs" />
     <Compile Include="Domain\ViewModels\AdyenPayments\ShoppingVoucherResponseModel.cs" />
     <Compile Include="Domain\ViewModels\ApiModels\ProductLocationStocksSync.cs" />
     <Compile Include="Domain\ViewModels\ProductPriceViewModel.cs" />
