--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2206,6 +2206,7 @@
     <Content Include="Views\DirectSales\_VanSalesCashReport.cshtml" />
     <Content Include="Views\Error\Index.cshtml" />
     <Content Include="Views\Shared\_ProductAttributesSelection.cshtml" />
+    <Content Include="Views\Shared\_ProductAttributePriceCreateEdit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
