--- a/GaneEcommerce.Data/Ganedata.Core.Data.csproj
+++ b/GaneEcommerce.Data/Ganedata.Core.Data.csproj
@@ -1327,6 +1327,10 @@
     <Compile Include="Migrations\202104061603376_AddedBankAccountDetailsForTenant.designer.cs">
       <DependentUpon>202104061603376_AddedBankAccountDetailsForTenant.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202104081344496_AddedPriceGroupAttributePricing.cs" />
+    <Compile Include="Migrations\202104081344496_AddedPriceGroupAttributePricing.designer.cs">
+      <DependentUpon>202104081344496_AddedPriceGroupAttributePricing.cs</DependentUpon>
+    </Compile>
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="MyDbConfiguration.cs" />
     <Compile Include="Helpers\DataImportFactory.cs" />
@@ -2643,6 +2647,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202104061603376_AddedBankAccountDetailsForTenant.resx">
       <DependentUpon>202104061603376_AddedBankAccountDetailsForTenant.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202104081344496_AddedPriceGroupAttributePricing.resx">
+      <DependentUpon>202104081344496_AddedPriceGroupAttributePricing.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
