Hotfix added logos for various instances

--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -1036,17 +1036,24 @@
     <Content Include="Content\fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Content\images\Add.png" />
     <Content Include="Content\images\asc.gif" />
+    <Content Include="Content\images\besco.png" />
     <Content Include="Content\images\bg.gif" />
     <Content Include="Content\images\cancel.png" />
+    <Content Include="Content\images\chickanos.png" />
+    <Content Include="Content\images\demo.png" />
     <Content Include="Content\images\desc.gif" />
     <Content Include="Content\images\Email.png" />
     <Content Include="Content\images\error_28px.png" />
     <Content Include="Content\images\footer-bg.png" />
+    <Content Include="Content\images\ganedata.png" />
+    <Content Include="Content\images\gelbottle.png" />
     <Content Include="Content\images\header-bg.jpg" />
     <Content Include="Content\images\Emaillogo.jpg" />
     <Content Include="Content\images\hive-logo.png" />
     <Content Include="Content\images\hivefooter.png" />
     <Content Include="Content\images\hold-orange.png" />
+    <Content Include="Content\images\icestone.png" />
+    <Content Include="Content\images\intranet.png" />
     <Content Include="Content\images\largebox.png" />
     <Content Include="Content\images\loading.gif" />
     <Content Include="Content\images\loan-order-icon.png" />
@@ -1057,17 +1064,20 @@
     <Content Include="Content\images\logo_stock.png" />
     <Content Include="Content\images\logo_wh.png" />
     <Content Include="Content\images\lookup.png" />
+    <Content Include="Content\images\manjaros.png" />
     <Content Include="Content\images\next.png" />
     <Content Include="Content\images\parklane-logo.png" />
     <Content Include="Content\images\proforma-icon.png" />
     <Content Include="Content\images\quotation-icon.png" />
     <Content Include="Content\images\r-credit.png" />
     <Content Include="Content\images\r-orange.png" />
+    <Content Include="Content\images\regals.png" />
     <Content Include="Content\images\sales-order-icon.png" />
     <Content Include="Content\images\sample-order-icon.png" />
     <Content Include="Content\images\search.png" />
     <Content Include="Content\images\smallbox.png" />
     <Content Include="Content\images\stop-red.png" />
+    <Content Include="Content\images\test.png" />
     <Content Include="Content\images\trash.png" />
     <Content Include="Content\images\warning.png" />
     <Content Include="Content\images\works-order-icon.png" />
