Fix local build issues

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -55,7 +55,7 @@
   </location>
   <connectionStrings>
     <!--Start session connectionString - Mohammed Majeed-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=LAPTOP-R0BRRUC;Initial Catalog=Live_Becsco_v4017;Integrated Security=False;User ID=sa;Password=Maj123.;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=51.89.155.65;Initial Catalog=Becsco-Staging;Integrated Security=False;User ID=sa;Password=Gan3d4ta!#;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
