--- a/GaneEcommerce.Services/Ganedata.Core.Services.csproj
+++ b/GaneEcommerce.Services/Ganedata.Core.Services.csproj
@@ -75,6 +75,9 @@
     <Reference Include="ExCSS, Version=3.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ExCSS.3.0.0\lib\netstandard1.1\ExCSS.dll</HintPath>
     </Reference>
+    <Reference Include="FirebaseNet, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\FirebaseNet.1.0.1\lib\net46\FirebaseNet.dll</HintPath>
+    </Reference>
     <Reference Include="LazyCache, Version=2.1.2.160, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\LazyCache.2.1.2\lib\netstandard2.0\LazyCache.dll</HintPath>
     </Reference>
