stock detail added when sales order is not wokring properly

--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -54,8 +54,7 @@
     </system.web>
   </location>
   <connectionStrings>
-    <!--Start session connectionString - Mohammed Majeed-->
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=51.89.155.65;Initial Catalog=Becsco-Staging;Integrated Security=False;User ID=sa;Password=Gan3d4ta!#;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Initial Catalog=Live_Becsco_v4017_12072021;Integrated Security=False;User ID=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -104,8 +103,7 @@
   <system.web>
     <!--This meduim trust level is added here because devexpress reports were not printing and saving properly without specifying that-->
     <trust level="Full" />
-    <!--Start session connectionString - Mohammed Majeed-->
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=LAPTOP-R0BRRUC;Integrated Security=False;User ID=sa;Password=Maj123.;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="300" />
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Integrated Security=False;User ID=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="300" />
     <globalization culture="en-GB" uiCulture="en-GB" />
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
