--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -54,7 +54,7 @@
     </system.web>
   </location>
   <connectionStrings>
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Initial Catalog=Live_Becsco_v4017_12072021;Integrated Security=False;User ID=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC\SQLSERVER2019;Initial Catalog=Becsco-Staging;Integrated Security=False;User ID=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
