--- a/WMS/WarehouseZone.csproj
+++ b/WMS/WarehouseZone.csproj
@@ -2223,6 +2223,7 @@
     <Content Include="Views\Shared\_ProductAttributePriceCreateEdit.cshtml" />
     <Content Include="Views\SalesOrders\_ProductStockDetail.cshtml" />
     <Content Include="Views\SalesOrders\StockDetail.cshtml" />
+    <Content Include="WebConfigLive.config" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
