--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -261,7 +261,7 @@
     <!--End click Jacking-->
     <!--Start HTTP to HTTPS redirect using URL Rewrite-->
     <!--URL rewrite module should to be installed on IIS-->
-    <rewrite>
+    <!--<rewrite>
       <rules>
         <rule name="No redirect on warmup request (request from localhost with warmup user agent)" stopProcessing="true">
           <match url=".*" />
@@ -271,7 +271,7 @@
           </conditions>
           <action type="Rewrite" url="{URL}" />
         </rule>
-        <!--<rule name="HTTP to HTTPS redirect" stopProcessing="true">
+        --><!--<rule name="HTTP to HTTPS redirect" stopProcessing="true">
           <match url="(.*)" />
           <conditions logicalGrouping="MatchAll">
             <add input="{REQUEST_URI}" pattern="iisstart" negate="true" />
@@ -279,9 +279,9 @@
             <add input="{HTTPS}" pattern="off" />
           </conditions>
           <action type="Redirect" url="https://{HTTP_HOST}/{R:1}" redirectType="Permanent" />
-        </rule>-->
+        </rule>--><!--
       </rules>
-    </rewrite>
+    </rewrite>-->
     <!--END HTTP to HTTPS redirect using URL Rewrite-->
 
     <validation validateIntegratedModeConfiguration="false" />
