--- a/WMS/Web.config
+++ b/WMS/Web.config
@@ -54,7 +54,7 @@
     </system.web>
   </location>
   <connectionStrings>
-    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-HOQIKAU;Initial Catalog=Becsco-Staging;Integrated Security=False;User ID=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
+    <add name="ApplicationContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-H9GO0QC;Initial Catalog=Live_IceStone;Integrated Security=False;User ID=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -103,7 +103,7 @@
   <system.web>
     <!--This meduim trust level is added here because devexpress reports were not printing and saving properly without specifying that-->
     <trust level="Full" />
-    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-HOQIKAU;Integrated Security=False;User ID=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="300" />
+    <sessionState mode="SQLServer" sqlConnectionString="Data Source=DESKTOP-H9GO0QC;Integrated Security=False;User ID=sa;Password=developer;MultipleActiveResultSets=True;Max Pool Size=200;Connection Timeout=30" timeout="300" />
     <globalization culture="en-GB" uiCulture="en-GB" />
     <compilation debug="true" targetFramework="4.7.2">
       <assemblies>
